--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
     implementation "org.koin:koin-core:2.0.1"
+    implementation "org.koin:koin-android:2.0.1"
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.hannesdorfmann.mosby3:mvp:3.1.1'
 
